Bring app pages alignment closer to PF4 page structure so that less overrides are needed and do not interfere with default PF component usage. Relates to dynamic plugin override issues

--- a/frontend/public/components/_notification-drawer.scss
+++ b/frontend/public/components/_notification-drawer.scss
@@ -1,6 +1,6 @@
 .co-notification-drawer {
   overflow-y: hidden !important;
-  z-index: 10;
+  z-index: 310 !important; // place above pf-m-sticky-top --pf-c-page--section--m-sticky-top--ZIndex + 10
   @include co-break-word;
 }
 
